databaseJava/MyMealManager/error.txt
RecipeSearcher.java:11: error: cannot find symbol
	public static ArrayList<Integer> getRids(Ingredient[] ingredients){	
	                                         ^
  symbol:   class Ingredient
  location: class RecipeSearcher
RecipeSearcher.java:54: error: cannot find symbol
	public static Recipe[] getMatchingRecipes(ArrayList<Integer> rids){
	              ^
  symbol:   class Recipe
  location: class RecipeSearcher
RecipeSearcher.java:89: error: cannot find symbol
	public static Recipe[] executeSearch(Ingredient[] ingredients){
	                                     ^
  symbol:   class Ingredient
  location: class RecipeSearcher
RecipeSearcher.java:89: error: cannot find symbol
	public static Recipe[] executeSearch(Ingredient[] ingredients){
	              ^
  symbol:   class Recipe
  location: class RecipeSearcher
RecipeSearcher.java:21: error: cannot find symbol
                     conn = DbManager.getConnection(true);
                            ^
  symbol:   variable DbManager
  location: class RecipeSearcher
RecipeSearcher.java:62: error: cannot find symbol
                     conn = DbManager.getConnection(true);
                            ^
  symbol:   variable DbManager
  location: class RecipeSearcher
RecipeSearcher.java:76: error: cannot find symbol
		Recipe[] recipes = new Recipe[matchLen];
		^
  symbol:   class Recipe
  location: class RecipeSearcher
RecipeSearcher.java:76: error: cannot find symbol
		Recipe[] recipes = new Recipe[matchLen];
		                       ^
  symbol:   class Recipe
  location: class RecipeSearcher
RecipeSearcher.java:82: error: cannot find symbol
				recipes[i] = new Recipe(rs.getString("RecipeName"), rs.getInt("RecipeID"), rs.getString("Instructions"), rs.getTime("TotalCookingTime").getHours(), rs.getTime("TotalCookingTime").getMinutes());
				                 ^
  symbol:   class Recipe
  location: class RecipeSearcher
Note: RecipeSearcher.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
9 errors
